--- a/data/Main.fxml
+++ b/data/Main.fxml
@@ -1,36 +1,37 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Menu?>
+<?import javafx.scene.control.MenuBar?>
+<?import javafx.scene.control.MenuItem?>
 <?import javafx.scene.control.ToggleButton?>
-<?import javafx.scene.layout.ColumnConstraints?>
-<?import javafx.scene.layout.GridPane?>
-<?import javafx.scene.layout.Pane?>
-<?import javafx.scene.layout.RowConstraints?>
+<?import javafx.scene.layout.AnchorPane?>
 
-<GridPane xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ija.project.controller.ClassController">
-  <columnConstraints>
-      <ColumnConstraints hgrow="SOMETIMES" maxWidth="-Infinity" minWidth="10.0" prefWidth="68.0" />
-    <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="368.0" />
-      <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="117.0" />
-  </columnConstraints>
-  <rowConstraints>
-    <RowConstraints maxHeight="-Infinity" minHeight="0.0" prefHeight="35.0" vgrow="SOMETIMES" />
-    <RowConstraints maxHeight="-Infinity" minHeight="10.0" prefHeight="38.0" vgrow="SOMETIMES" />
-    <RowConstraints maxHeight="-Infinity" minHeight="0.0" prefHeight="30.0" vgrow="SOMETIMES" />
-      <RowConstraints maxHeight="-Infinity" minHeight="0.0" prefHeight="30.0" vgrow="SOMETIMES" />
-      <RowConstraints maxHeight="-Infinity" minHeight="10.0" prefHeight="34.0" vgrow="SOMETIMES" />
-      <RowConstraints maxHeight="-Infinity" minHeight="10.0" prefHeight="33.0" vgrow="SOMETIMES" />
-      <RowConstraints minHeight="10.0" prefHeight="35.0" vgrow="SOMETIMES" />
-  </rowConstraints>
-   <children> <!-- TODO Scene change-->
-      <Button fx:id="saveButton" mnemonicParsing="false" text="Save" GridPane.halignment="CENTER" GridPane.valignment="CENTER" />
-      <Button fx:id="loadButton" mnemonicParsing="false" text="Load" GridPane.halignment="CENTER" GridPane.rowIndex="1" GridPane.valignment="CENTER" />
-      <Button fx:id="addButton" mnemonicParsing="false" onAction="#addClass" text="Add" GridPane.halignment="CENTER" GridPane.rowIndex="3" GridPane.valignment="CENTER" />
-      <ToggleButton fx:id="connectButton" mnemonicParsing="false" onAction="#changeToConnect" text="Connect" GridPane.halignment="CENTER" GridPane.rowIndex="4" GridPane.valignment="CENTER" />
-      <ToggleButton fx:id="deleteButton" mnemonicParsing="false" onAction="#changeToDelete" text="Delete" GridPane.halignment="CENTER" GridPane.rowIndex="5" GridPane.valignment="CENTER" />
-      <ToggleButton fx:id="selectButton" mnemonicParsing="false" onAction="#changeToSelect" selected="true" text="Select" GridPane.halignment="CENTER" GridPane.rowIndex="2" GridPane.valignment="CENTER" />
-      <Pane fx:id="panel" GridPane.columnIndex="2" GridPane.columnSpan="2147483647" GridPane.rowIndex="6" GridPane.rowSpan="2147483647">
-      </Pane>
-      <Button mnemonicParsing="false" text="Sequence diagram" GridPane.columnIndex="2" GridPane.rowIndex="6" />
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ija.project.controller.ClassController">
+   <children>
+      <MenuBar prefHeight="27.0" prefWidth="600.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0">
+        <menus>
+          <Menu mnemonicParsing="false" text="File">
+            <items>
+              <MenuItem mnemonicParsing="false" text="Close" />
+            </items>
+          </Menu>
+          <Menu mnemonicParsing="false" text="Edit">
+            <items>
+              <MenuItem mnemonicParsing="false" text="Delete" />
+            </items>
+          </Menu>
+          <Menu mnemonicParsing="false" text="Help">
+            <items>
+              <MenuItem mnemonicParsing="false" text="About" />
+            </items>
+          </Menu>
+        </menus>
+      </MenuBar>
+      <ToggleButton fx:id="connectButton" layoutX="14.0" layoutY="129.0" mnemonicParsing="false" onAction="#changeToConnect" prefHeight="26.0" prefWidth="69.0" text="Connect" />
+      <ToggleButton fx:id="deleteButton" layoutX="14.0" layoutY="174.0" mnemonicParsing="false" onAction="#changeToDelete" prefHeight="26.0" prefWidth="69.0" text="Delete" />
+      <ToggleButton fx:id="selectButton" layoutX="14.0" layoutY="45.0" mnemonicParsing="false" prefHeight="26.0" prefWidth="69.0" text="Select" />
+      <Button fx:id="addButton" layoutX="14.0" layoutY="87.0" mnemonicParsing="false" onAction="#addClass" prefHeight="26.0" prefWidth="69.0" text="Add" />
+      <AnchorPane fx:id="anchorPane" layoutX="100.0" layoutY="29.0" prefHeight="369.0" prefWidth="497.0" />
    </children>
-</GridPane>
+</AnchorPane>
