--- a/data/Main.fxml
+++ b/data/Main.fxml
@@ -8,7 +8,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ija.project.controller.ClassController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ija.project.controller.ClassController">
    <children>
       <MenuBar layoutX="-136.0" prefHeight="27.0" prefWidth="736.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0">
         <menus>
@@ -31,10 +31,12 @@
       </MenuBar>
       <ToggleButton fx:id="connectButton" layoutX="14.0" layoutY="115.0" mnemonicParsing="false" onAction="#changeToConnect" prefHeight="26.0" prefWidth="69.0" text="Connect" />
       <ToggleButton fx:id="deleteButton" layoutX="14.0" layoutY="201.0" mnemonicParsing="false" onAction="#changeToDelete" prefHeight="26.0" prefWidth="69.0" text="Delete" />
-      <ToggleButton fx:id="selectButton" layoutX="14.0" layoutY="71.0" mnemonicParsing="false" prefHeight="26.0" prefWidth="69.0" text="Select" />
+      <ToggleButton fx:id="selectButton" layoutX="14.0" layoutY="71.0" mnemonicParsing="false" onAction="#changeToSelect" prefHeight="26.0" prefWidth="69.0" selected="true" text="Select" />
       <Button fx:id="addButton" layoutX="14.0" layoutY="156.0" mnemonicParsing="false" onAction="#addClass" prefHeight="26.0" prefWidth="69.0" text="Add" />
-      <AnchorPane fx:id="anchorPane" layoutX="96.0" layoutY="58.0" onMouseDragged="#setCoordinatesText" onMouseMoved="#setCoordinatesText" prefHeight="520.0" prefWidth="690.0" AnchorPane.topAnchor="58.0" maxHeight="1080" maxWidth="1900"/>
+      <AnchorPane fx:id="anchorPane" layoutX="96.0" layoutY="58.0" maxHeight="1080" maxWidth="1900" onMouseDragged="#setCoordinatesText" onMouseMoved="#setCoordinatesText" prefHeight="520.0" prefWidth="690.0" AnchorPane.topAnchor="58.0" />
       <Text fx:id="coordinatesText" layoutX="100.0" layoutY="54.0" strokeType="OUTSIDE" strokeWidth="0.0" wrappingWidth="252.13000106811523" />
       <Text fx:id="boxCoordinates" layoutX="352.0" layoutY="54.0" strokeType="OUTSIDE" strokeWidth="0.0" wrappingWidth="252.13000106811523" />
+      <Text fx:id="textMode" layoutX="37.0" layoutY="54.0" strokeType="OUTSIDE" strokeWidth="0.0" />
+      <Button fx:id="addAttrButton" layoutX="14.0" layoutY="241.0" mnemonicParsing="false" onAction="#addAttribute" prefHeight="26.0" prefWidth="69.0" text="Add attr" />
    </children>
 </AnchorPane>
