--- a/data/Main.fxml
+++ b/data/Main.fxml
@@ -8,7 +8,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ija.project.controller.ClassController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ija.project.controller.ClassController">
    <children>
       <MenuBar layoutX="-136.0" prefHeight="27.0" prefWidth="736.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0">
         <menus>
@@ -36,6 +36,6 @@
       <AnchorPane fx:id="anchorPane" layoutX="96.0" layoutY="58.0" maxHeight="720.0" maxWidth="1280.0" onMouseDragged="#setCoordinatesText" onMouseMoved="#setCoordinatesText" prefHeight="520.0" prefWidth="690.0" AnchorPane.topAnchor="58.0" />
       <Text fx:id="coordinatesText" layoutX="100.0" layoutY="54.0" strokeType="OUTSIDE" strokeWidth="0.0" wrappingWidth="252.13000106811523" />
       <Text fx:id="boxCoordinates" layoutX="352.0" layoutY="54.0" strokeType="OUTSIDE" strokeWidth="0.0" wrappingWidth="252.13000106811523" />
-      <Text fx:id="textMode" layoutX="19.0" layoutY="528.0" strokeType="OUTSIDE" strokeWidth="0.0" wrappingWidth="59.0" />
+      <Text fx:id="textMode" layoutX="19.0" layoutY="528.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Mode: Select" wrappingWidth="59.0" />
    </children>
 </AnchorPane>
