--- a/data/Main.fxml
+++ b/data/Main.fxml
@@ -15,7 +15,7 @@
           <Menu mnemonicParsing="false" text="File">
             <items>
                   <MenuItem fx:id="loadFileItem" mnemonicParsing="false" onAction="#loadFile" text="Load" />
-                  <MenuItem fx:id="saveFileItem" mnemonicParsing="false" text="Save" />
+                  <MenuItem fx:id="saveFileItem" mnemonicParsing="false" onAction="#saveToFile" text="Save" />
                   <MenuItem mnemonicParsing="false" text="Close" />
             </items>
           </Menu>
