--- a/data/application.css
+++ b/data/application.css
@@ -3,6 +3,11 @@
     -fx-border-style: "solid";
     -fx-border-color: "black";
 }
+#sequenceAnchorPane {
+     -fx-background-color: "white";
+     -fx-border-style: "solid";
+     -fx-border-color: "black";
+ }
 
 Text {
     -fx-background-color: "white";
