--- a/data/Main.fxml
+++ b/data/Main.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Rectangle2D?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Menu?>
 <?import javafx.scene.control.MenuBar?>
@@ -11,7 +12,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane fx:id="classDiagramWindow" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ija.project.controller.ClassController">
+<AnchorPane fx:id="classDiagramWindow" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ija.project.controller.ClassController">
    <children>
       <MenuBar layoutX="-136.0" prefHeight="27.0" prefWidth="736.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0">
         <menus>
@@ -34,15 +35,30 @@
           </Menu>
         </menus>
       </MenuBar>
-      <ToggleButton fx:id="connectButton" layoutX="19.0" layoutY="120.0" mnemonicParsing="false" onAction="#changeToConnect" prefHeight="50.0" prefWidth="50.0">
+      <ToggleButton fx:id="connectLineButton" layoutX="14.0" layoutY="183.0" mnemonicParsing="false" onAction="#changeToLineConnect" prefHeight="28.0" prefWidth="24.0">
          <graphic>
-            <ImageView fitHeight="40.0" fitWidth="40.0" pickOnBounds="true" preserveRatio="true">
+            <ImageView fitHeight="20.0" fitWidth="20.0" pickOnBounds="true" preserveRatio="true">
                <image>
                   <Image url="@images/linepointer.png" />
                </image>
+               <viewport>
+                  <Rectangle2D />
+               </viewport>
             </ImageView>
          </graphic></ToggleButton>
-      <ToggleButton fx:id="deleteButton" layoutX="20.0" layoutY="236.0" mnemonicParsing="false" onAction="#changeToDelete" prefHeight="50.0" prefWidth="50.0">
+      <ToggleButton fx:id="connectDependencyButton" layoutX="55.0" layoutY="183.0" mnemonicParsing="false" onAction="#changeToDependencyConnect" prefHeight="28.0" prefWidth="24.0">
+         <graphic>
+            <ImageView fitHeight="20.0" fitWidth="20.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@images/dependency.png" />
+               </image>
+               <viewport>
+                  <Rectangle2D />
+               </viewport>
+            </ImageView>
+         </graphic>
+      </ToggleButton>
+      <ToggleButton fx:id="deleteButton" layoutX="23.0" layoutY="298.0" mnemonicParsing="false" onAction="#changeToDelete" prefHeight="50.0" prefWidth="50.0">
          <graphic>
             <ImageView fitHeight="40.0" fitWidth="40.0" pickOnBounds="true" preserveRatio="true">
                <image>
@@ -50,6 +66,42 @@
                </image>
             </ImageView>
          </graphic></ToggleButton>
+      <ToggleButton fx:id="connectAggregationButton" layoutX="55.0" layoutY="221.0" mnemonicParsing="false" onAction="#changeToAggregationConnect" prefHeight="28.0" prefWidth="24.0">
+         <graphic>
+            <ImageView fitHeight="20.0" fitWidth="20.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@images/aggregation.png" />
+               </image>
+               <viewport>
+                  <Rectangle2D />
+               </viewport>
+            </ImageView>
+         </graphic>
+      </ToggleButton>
+      <ToggleButton fx:id="connectInheritanceButton" layoutX="14.0" layoutY="257.0" mnemonicParsing="false" onAction="#changeToInheritanceConnect" prefHeight="28.0" prefWidth="24.0">
+         <graphic>
+            <ImageView fitHeight="20.0" fitWidth="20.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@images/inheritance.png" />
+               </image>
+               <viewport>
+                  <Rectangle2D />
+               </viewport>
+            </ImageView>
+         </graphic>
+      </ToggleButton>
+      <ToggleButton fx:id="connectCompositionButton" layoutX="14.0" layoutY="221.0" mnemonicParsing="false" onAction="#changeToCompositionConnect" prefHeight="28.0" prefWidth="24.0">
+         <graphic>
+            <ImageView fitHeight="20.0" fitWidth="20.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@images/composition.png" />
+               </image>
+               <viewport>
+                  <Rectangle2D />
+               </viewport>
+            </ImageView>
+         </graphic>
+      </ToggleButton>
       <ToggleButton fx:id="selectButton" layoutX="18.0" layoutY="65.0" mnemonicParsing="false" onAction="#changeToSelect" prefHeight="46.0" prefWidth="59.0" selected="true">
          <graphic>
             <ImageView fitHeight="40.0" fitWidth="40.0" pickOnBounds="true" preserveRatio="true">
@@ -58,16 +110,16 @@
                </image>
             </ImageView>
          </graphic></ToggleButton>
-      <Button fx:id="addButton" layoutX="19.0" layoutY="178.0" mnemonicParsing="false" onAction="#addClass" prefHeight="50.0" prefWidth="58.0" text="+" textAlignment="CENTER">
+      <Button fx:id="addButton" layoutX="19.0" layoutY="122.0" mnemonicParsing="false" onAction="#addClass" prefHeight="50.0" prefWidth="58.0" text="+" textAlignment="CENTER">
          <font>
             <Font size="23.0" />
          </font></Button>
-      <AnchorPane fx:id="anchorPane" layoutX="96.0" layoutY="58.0" maxHeight="720.0" maxWidth="1280.0" onMouseDragged="#setCoordinatesText" onMouseMoved="#setCoordinatesText" prefHeight="520.0" prefWidth="690.0" AnchorPane.topAnchor="58.0" />
+      <AnchorPane fx:id="anchorPane" layoutX="110.0" layoutY="58.0" maxHeight="720.0" maxWidth="1280.0" onMouseDragged="#setCoordinatesText" onMouseMoved="#setCoordinatesText" prefHeight="529.0" prefWidth="680.0" AnchorPane.topAnchor="58.0" />
       <Text fx:id="coordinatesText" layoutX="100.0" layoutY="54.0" strokeType="OUTSIDE" strokeWidth="0.0" wrappingWidth="252.13000106811523" />
       <Text fx:id="boxCoordinates" layoutX="352.0" layoutY="54.0" strokeType="OUTSIDE" strokeWidth="0.0" wrappingWidth="252.13000106811523" />
-      <Text fx:id="textMode" layoutX="19.0" layoutY="528.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Mode: Select" wrappingWidth="59.0" />
-      <Button fx:id="classButton" layoutX="23.0" layoutY="473.0" mnemonicParsing="false" onAction="#switchToSequence" text="Switch" textAlignment="CENTER" />
-      <Button fx:id="undoButton" layoutX="23.0" layoutY="306.0" mnemonicParsing="false" onAction="#undo" text="Undo" disable="true"/>
-      <Button fx:id="redoButton" layoutX="20.0" layoutY="344.0" mnemonicParsing="false" onAction="#redo" text="Redo" disable="true"/>
+      <Text fx:id="textMode" layoutX="18.0" layoutY="564.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Mode: Select" wrappingWidth="59.0" />
+      <Button fx:id="classButton" layoutX="19.0" layoutY="518.0" mnemonicParsing="false" onAction="#switchToSequence" text="Switch" textAlignment="CENTER" />
+      <Button fx:id="undoButton" disable="true" layoutX="22.0" layoutY="450.0" mnemonicParsing="false" onAction="#undo" text="Undo" />
+      <Button fx:id="redoButton" disable="true" layoutX="23.0" layoutY="482.0" mnemonicParsing="false" onAction="#redo" text="Redo" />
    </children>
 </AnchorPane>
